[package]
name = "charizarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blosc = { version = "0.1", optional = true }
flate2 = { version = "1.0.28", optional = true }
futures = "0.3.29"
itertools = "0.12.1"
ndarray = "0.15.6"
num = "0.4"
object_store = "0.10.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
thiserror = "1.0.60"
tokio = { version = "1", features = ["full"] }

[features]
default = ["blosc", "gzip"]
blosc = ["dep:blosc"]
gzip = ["dep:flate2"]
